--- a/gitcopy/OtherTests/p/mag/style.css
+++ b/gitcopy/OtherTests/p/mag/style.css
@@ -210,3 +210,18 @@ img {
     }
     }
 
+
+    .Carousel{
+      animation: carousel 3000s linear infinite;
+      display: flex;
+      flex-wrap: nowrap;
+      width: 100vw;
+  }
+  .Block{
+      flex-shrink: 0;
+      width: 150px;
+  }
+  @keyframes carousel{
+      0%   { transform: translate3d(0, 0, 0); }
+      100% { transform: translate3d(-20000px, 0, 0); }
+  }
