added new carousel?

--- a/gitcopy/OtherTests/p/mag/style.css
+++ b/gitcopy/OtherTests/p/mag/style.css
@@ -244,3 +244,16 @@ img {
   .gap{
     width: 100px;
   }
+
+  .marquee {
+    overflow: hidden;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    display: flex;
+  }
+  
+  .marquee h1{
+    font-size: 5em;
+    white-space: nowrap;
+    text-transform: uppercase
+  }
