--- a/gitcopy/OtherTests/p/mag/style.css
+++ b/gitcopy/OtherTests/p/mag/style.css
@@ -230,3 +230,8 @@ img {
     white-space: nowrap;
     text-transform: uppercase
   }
+  .marquee .entry{
+    font-size: 5em;
+    white-space: nowrap;
+    text-transform: uppercase
+  }
