--- a/gitcopy/OtherTests/p/bj/style.css
+++ b/gitcopy/OtherTests/p/bj/style.css
@@ -4,21 +4,6 @@ body {
   margin: 0;
 }
 
- .scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-  height: 40.0%;
-
-  .card {
-    display: inline-block;
-    height: 40.0%;
-    width: 25.2%;
-    color:rgb(44, 44, 44);
-  }
-}
-
 img {
     height: 100%;
     width: 100%;
@@ -100,8 +85,15 @@ img {
 
 
   .carouselimg {
-    width: 35%;
-    float:left;
+    width:40%;
+    margin:0;
+    float: left;
+
+  }
+  .carouselimg2 {
+    width:20%;
+    margin:0;
+    float:right;
   }
   
   .container {
@@ -110,16 +102,8 @@ img {
     position: relative;
   }
   
-  .items {
+/*  .entry {
     display: flex;
-    align-items: center;
-    width: fit-content;
-    animation: carouselAnim 50s infinite alternate linear;
-  }
-  
-  .entry {
-    display: flex;
-    align-items: center;
     flex-direction: column;
     position: relative;
     width: 300px;
@@ -129,40 +113,17 @@ img {
     border-radius: 10px;
     box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.5);
   }
-  
-  @media only screen and (max-width: 768px) {
-    .items {
-      animation: carouselAnim 35s infinite alternate linear;
-    }
-    
-    @keyframes carouselAnim {
-      from {
-        transform: translate(0, 0);
-      }
-      to {
-        transform: translate(calc(-100% + (2 * 300px)));
-      }
-    }
-  }
-  
-  .entry p {
-    text-align: center;
-    padding: 1em;
-  }
+  */
+
   
   .name {
     font-weight: bold;
+    font-family: arial, sans-serif;
   }
-  
-  @keyframes carouselAnim {
-    from {
-      transform: translate(0, 0);
-    }
-    to {
-      transform: translate(calc(-100% + (4 * 300px)));
-    }
+  .quote {
+    font-family: arial, sans-serif;
   }
-  
+
   .container .faders {
     width: 100%;
     position: absolute;
@@ -203,10 +164,51 @@ img {
   }
   
   
-  @media screen and (max-width: 600px) {
-    .scrolling-wrapper .card {
-      height: 80%;
-      width: 50.449%;
-    }
+
+
+  .marquee {
+    overflow: hidden;
+    border-top: 0px solid #000;
+    border-bottom: 0px solid #000;
+    display: flex;
+  }
+  
+  .marquee h1{
+    font-size: 5em;
+    white-space: nowrap;
+    text-transform: uppercase
+  }
+
+  .marquee .entry {
+    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 300px;
+    background: #fff;
+    margin: 1em;
+    padding: 0.5em;
+    border-radius: 10px;
+    box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.5);
+  }
+  p.quote {
+    padding: 1em;
+    padding-left: 0.2em;
+  }
+
+  p.name {
+    padding: 1em;
+    padding-left: 0.2em;
+  }
+
+  .quote {
+    white-space: normal;
+    width: 300px;
+  }
+
+/*    .entry p {
+      padding: 1em;
+      padding-left: 0.2em;
     }
 
+    */
