--- a/gitcopy/OtherTests/p/mag/style.css
+++ b/gitcopy/OtherTests/p/mag/style.css
@@ -39,7 +39,6 @@ img {
     left: 0;
     width: 100%;
     background-color: #333;
-    overflow: hidden;
     margin: 0;
     padding: 0;
   }
@@ -212,3 +211,62 @@ img {
     }
 
     */
+
+    .dropbtn {
+      background-color: #04AA6D;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+    }
+    
+    .dropdown {
+      all: revert;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      width:400px;
+      background: #454444;
+    }
+    
+    .test {
+      display: inline-block;
+      float: left;
+      width:100px;
+    }
+    
+    .imgforlinks {
+      width:200px;
+      display:inline-block;
+    }
+    
+    
+    .menuimgproj {
+      display: inline-block;
+      float: right;
+      width:50%;
+      padding: 21px;
+    }
+    
+    .dropdown-content a {
+      color: white;
+      font-weight:500;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    
+    .test a:hover {background-color: #ddd;}
+    
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
